fixed comment img position on firefox

--- a/app/styles/issueboard.css
+++ b/app/styles/issueboard.css
@@ -189,6 +189,7 @@
   width:30px;
   height:30px;
   position: absolute;
+  left:30px;
 }
 
 .avatar-img:hover {
